--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
     "husky": "^3.0.9"
   },
   "dependencies": {
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint",
+      "pre-push": "yarn lint"
+    }
   }
 }
