--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "./node_modules/.bin/eslint **/*.js"
+    "lint": "./node_modules/.bin/eslint **/*.js",
+    "start": "nodemon src/index.js"
   },
   "license": "ISC",
   "devDependencies": {
@@ -15,6 +16,11 @@
     "husky": "^3.0.9"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "hbs": "^4.0.6",
+    "node-fetch": "^2.6.0"
   },
   "husky": {
     "hooks": {
