--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "./node_modules/.bin/eslint **/*.js",
-    "start": "nodemon src/index.js"
+    "lint": "./node_modules/.bin/eslint src/**/*.js",
+    "start": "nodemon src/index.js -e js,hbs,css"
   },
   "license": "ISC",
   "devDependencies": {
