--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "./node_modules/.bin/eslint src/**/*.js",
-    "start": "nodemon src/index.js -e js,hbs,css"
+    "start": "node src/index.js -e js,hbs,css"
   },
   "license": "ISC",
   "devDependencies": {
