--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "license": "ISC",
   "devDependencies": {
     "eslint": "^6.6.0",
-    "eslint-config-google": "^0.14.0",
-    "husky": "^3.0.9"
+    "eslint-config-google": "^0.14.0"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "hbs": "^4.0.6",
